--- a/css/style.css
+++ b/css/style.css
@@ -516,25 +516,25 @@ form input[type="radio"] {
                 
 
 .attention {
-                background: #fffbcc url('../images/exclamation.png')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/icons/exclamation.png*/ 10px 11px no-repeat;
+                background: #fffbcc url('../images/exclamation.png') 10px 11px no-repeat;
                 border-color: #e6db55;
                 color: #666452;
                 }
 
 .information {
-                background: #dbe3ff url('../images/information.png')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/icons/information.png*/;
+                background: #dbe3ff url('../images/information.png');
                 border-color: #a2b4ee;
                 color: #585b66;
                 }
 
 .success {
-                background: #d5ffce url('../images/tick_circle.png')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/icons/tick_circle.png*/;
+                background: #d5ffce url('../images/tick_circle.png');
                 border-color: #9adf8f;
                 color: #556652;
                 }
 
 .error {
-                background: #ffcece url('../images/cross_circle.png')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/icons/cross_circle.png*/;
+                background: #ffcece url('../images/cross_circle.png');
                 border-color: #df8f8f;
                 color: #665252;
                 }
@@ -576,11 +576,11 @@ form input[type="radio"] {
 
 body#login {
                 color: #fff;
-                background: #222 url('../images/bg-login.gif')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/bg-login.gif*/;
+                background: #222 url('../images/bg-login.gif');
 				}
 				
 #login-wrapper {
-                background: url('../images/bg-login-top.png')/*tpa=http://demo.ponjoh.com/Simpla-Admin/resources/../images/bg-login-top.png*/ top left repeat-x;
+                background: url('../images/bg-login-top.png') top left repeat-x;
 				}
 
 #login-wrapper #login-top {
@@ -797,4 +797,25 @@ div.wysiwyg iframe { border: 0; margin: 5px 0 0 0; clear: left; width: 97.5% !im
 }
 #jstree_demo_div a:hover{
 	color: #042b16;
+}
+.wait-overlay {
+    /* IE8 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+    /* IE8 */
+    background-color: rgba(71, 168, 123, 0.4);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    text-align:center;
+    display:none;
+    z-index: 10000;
+}
+.wait-overlay img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -100px;
 }
